--- a/SmartApi/appsettings.json
+++ b/SmartApi/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "sqlconnstr": "Data Source=192.168.31.51;Initial Catalog=SmartMedical;User ID=sa;Password=tang" }
 }
