--- a/Smart/Smart.csproj
+++ b/Smart/Smart.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.0.15" />
     <PackageReference Include="Braintree" Version="5.5.0" />
+    <PackageReference Include="ServiceStack.Redis" Version="5.11.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.2.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
