--- a/Smart/appsettings.json
+++ b/Smart/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "sqlconnstr": "Data Source=192.168.31.51;Initial Catalog=SmartMedical;User ID=sa;Password=tang" }
+  "ConnectionStrings": { "sqlconnstr": "Data Source=192.168.31.51;Initial Catalog=SmartMedical;User ID=sa;Password=tang" },
+  "RedisConnectionString": "127.0.0.1:6379,defaultDatabase=db2"
 }
